Adaptation des éléments de livraison et README