@@ -1,79 +1,108 @@
+
 # geor_photos_obliques_backend
 Backend du module Photos Obliques de Rennes Métropole
 
 ## I Mise en oeuvre de la Base de données
 
 L'application nécessite la création de deux schémas distincts dans la base de données. 
-Le premier, **_phototheque_**, contient toutes les informations sur les photos. 
-Le second, **_photos_obliques_stats_**, permet de stocker les différentes statistiques générées par le backend de l'application.
+Le premier, **phototheque**, contient toutes les informations sur les photos. 
+Le second, **photos_obliques_stats**, permet de stocker les différentes statistiques générées par le backend de l'application.
 
 ### I.1 Phototheque
 
-Si le schéma Phototheque n'existe pas, vous pouvez le créer en exécutant le script _create.sql_ présent dans le dossier `resources/bdd/phototheque`.
-Ce script va créer le schéma ainsi que 2 utilisateurs. Un utilisateur admin, et un second qui pourra simplement y accéder. 
-Vous pouvez modifier ce script pour changer les noms d'utilisateur et mots de passe défaut.
+Les ressources nécessaires à la création des éléments relatifs à **phototheque** se trouvent dans le dossier *resources/bdd/phototheque*.
 
-Vous pouvez ensuite execute le script initialisation.sql qui créera la table _photo_oblique_.
+Le script *[create.sql](resources/bdd/phototheque/create.sql)* permet de créer :
+
+- Le schéma
+- Un utilisateur propriétaire du schéma nommé *photos_obliques*, 
+- Un utilisateur en lecture seule sur le schéma nommé *consult*. 
+
+Vous pouvez modifier ce script pour changer les noms d'utilisateur et les mots de passe par défaut.
+
+Le script *[initialisation.sql](resources/bdd/phototheque/initialisation.sql)* permet de créer la table *photo_oblique* dans le schéma précédemment créé.
 
 ### I.2 Statistiques
 
-De la même façon que pour le schéma phototheque, éxécutez les scripts du dossier 'resources/bdd/phototheque' pour créer le schéma **_photos_obliques_stats_** 
-puis initialiser la table _statiques_.
+De la même façon que pour le schéma phototheque, éxécutez les scripts du dossier 'resources/bdd/phototheque' pour créer le schéma **photos_obliques_stats** 
+puis initialiser la table *statiques*.
+
+Les ressources nécessaires à la création des éléments relatifs à **photos_obliques_stats** se trouvent dans le dossier *resources/bdd/statistiques*.
+
+Le script *[create.sql](resources/bdd/statistiques/create.sql)* permet de créer :
+
+- Le schéma
+- Un utilisateur nommé *stats*, 
+
+Vous pouvez modifier ce script pour changer le nom d'utilisateur et le mot de passe par défaut.
+
+
+Le script *[initialisation.sql](resources/bdd/statistiques/initialisation.sql)* permet de créer la table *statistiques* dans le schéma précédemment créé.
 
 ## II Configuration de l'application
 
-### II.1 Propriétés de connexion 
+Un template complet de fichier de propriétés est présent dans le dossier **[docker/photos-obliques.properties](docker/photos-obliques.properties)**.
 
-Une fois les schémas créés, configurez les propriétés de connexion à la base de données dans le fichier de configuration de l'application Spring **photos-obliques.properties**.
+### II.1 Propriétés de connexion aux bases de données
 
-Pour chaque scéma indiquer l'url d'accès sur les propriétés suivante :
-
-```properties
-    spring.phototheque.datasource.jdbc-url
-    spring.stats.datasource.jdbc-url
-```
-
-Si vous avez modifié les noms d'utilisateur et mots de passe, modifiez également ces propriétés :
+Les propriétés suivantes permettent de configurer l'accès aux 2 schémas utilisés par l'application :
 
 ```properties
-    spring.phototheque.datasource.username
-    spring.phototheque.datasource.password
-    spring.stats.datasource.username
-    spring.stats.datasource.password
+  spring.phototheque.datasource.jdbc-url=jdbc:postgresql://${pgsqlHost}:${pgsqlPort}/${pgsqlDatabase}?currentSchema=photos_obliques&ApplicationName=georchestra
+  spring.phototheque.datasource.username=<username en consultation sur le schema photos_obliques>
+  spring.phototheque.datasource.password=<à définir>
+
+  spring.stats.datasource.jdbc-url=jdbc:postgresql://${pgsqlHost}:${pgsqlPort}/${pgsqlDatabase}?currentSchema=stats&ApplicationName=georchestra
+  spring.stats.datasource.username=<username en accès sur le schéma photos_obliques_stats>
+  spring.stats.datasource.password=<à définir>
+
 ```
+
+**Remarque :**
+
+- Les variables *pgsqlHost*, *pgsqlPort*, *pgsqlDatabase* vont référence à des variables par défaut présentes dans le fichier de configuration *default.properties* de GeOrchestra.
 
 ### II.2 Propriétés d'application
 
-Toujours dans le fichier **photos-obliques.properties**, c'est également ici que vous pourrez configurer les différents paramètres de l'application comme suit:
+Les propriétés suivantes permettent de configurer l'application Photos-Obliques :
+
 ```properties
-    photos-obliques.tolerance.angle= tolerance de l'angle lors de la recherche (en degré)
-    photos-obliques.url.vignette= url du serveur contenant les vignettes
-    photos-obliques.url.apercu= url du serveur contenant les apercus
-    photos-obliques.acces.photohd= Path du dossier contenant les photos hautes qualités
-    photos-obliques.panier.max.photos= 200 par défaut
-    server.port= port de l'application 
+  server.port=<port de l'application>
+  
+  photos-obliques.tolerance.angle=<tolerance de l'angle lors de la recherche (en degré)>
+  photos-obliques.url.vignette=<url du serveur contenant les vignettes>
+  photos-obliques.url.apercu=<url du serveur contenant les apercus>
+  photos-obliques.acces.photohd=<chemin du dossier contenant les photos hautes qualités
+  photos-obliques.panier.max.photos=<nombre maximum de photos dans le panier (200 par défaut)>
+
 ```
 
-### II.3  Configuration du certificat
+**Remarque :**
 
-Un script est lancé au déploiement de l'image docker de l'application qui ajoute un certificat donné au keystore.  
-Afin d'ajouter le bon certificat au bon keystore, il est nécessaire de remplir les informations adéquates dans le fichier `properties` de l'application :
+- La propriété *photos-obliques.acces.photohd* doit désigner un répertoire. Dans le cadre d'une installation dockerisée, le répertoire doit être visible depuis le container (sous forme d'un volume par exemple ou d'un répertoire dans un des volumes déjà monté).
+
+### II.3 Configuration du certificat
+
+Un script est lancé au déploiement de l'image docker de l'application qui ajoute un certificat donné au keystore.
+
+Afin d'ajouter le bon certificat au bon keystore, il est nécessaire de remplir les informations adéquates dans le fichier *photos-obliques.properties* :
 
 ```yaml
 # dossier contenant le certificat
-server.trustcert.keystore.path=
+server.trustcert.keystore.path=<chemin du certificat>
 # filename du certificat
-server.trustcert.keystore.cert=
+server.trustcert.keystore.cert=<nom du fichier contenant le certificat>
 # nom de l'alias du certificat à insérer dans le keystore
-server.trustcert.keystore.alias=
+server.trustcert.keystore.alias=<alias du certificat>
 # chemin absolu du keystore dans le container docker
-server.trustcert.keystore.store=
+server.trustcert.keystore.store=<chemin absolu du keystore dans le container docker>
 # mot de passe du keystore
-server.trustcert.keystore.password=
+server.trustcert.keystore.password=<mot de passe du keystore>
 ```
 
-Par exemple :
-```
+**Exemple :**
+
+```properties
 server.trustcert.keystore.path=/etc/georchestra/
 server.trustcert.keystore.cert=photobliques.crt
 server.trustcert.keystore.alias=certificat-photobliques
@@ -81,34 +110,54 @@ server.trustcert.keystore.store=/usr/local/openjdk-11/lib/security/cacerts
 server.trustcert.keystore.password=changeit
 ```
 
-Si les variables ne sont pas remplies, le certificat n'est pas ajouté au keystore et l'application démarre normalement.
+**Remarques :**
 
-Le certificat dont le nom est renseigné doit être déposé dans `<...>/config/photos-obliques/` (le répertoire <...>/config/ qui est monté sur le répertoire /etc/georchestra dans le container)
+- Les propriétés *server.trustcert.keystore.path* et *server.trustcert.keystore.store* doivent désigner un répertoire. Dans le cadre d'une installation dockerisée, le répertoire doit être visible depuis le container (sous forme d'un volume par exemple ou d'un répertoire dans un des volumes déjà monté).
+- Si les variables ne sont pas remplies, le certificat n'est pas ajouté au keystore et l'application démarre normalement.
 
-## III Intégration dans Georchestra
+## III Démarrage du service
 
-### III.1 Modification du security proxy pour Photos Obliques
+Le backend peut être mis en oeuvre :
 
-Ajouter dans le fichier *target-mapping.properties* une ligne permettant de déclarer le backend de photos oblique au security proxy. 
+- En tant qu'application java éxecutable,
+- En tant que service dockerisé à partir de votre propre image,
+- En tant que service dockerisé à partir d'une image publiée sur dockerhub.
 
-Déclarez le backend avec une ligne de la forme :
+### III.1 Application Java éxecutable 
 
-```properties
-    photosobliques=http(s)://<hôte du backend>:<port>/photosobliques
+Le démarrage de l'application peut se faire à l'aide de la ligne de commande suivante :
+
 ```
-**Example** : ```photosobliques=http://signalement:8080/signalement```
-
-
-Ajouter dans le fichier *security-mapping.xml* une ligne permettant de configurer les roles qui auront l'accès au backend :
-```xml
-<intercept-url pattern="/photosobliques/.*" access=<Liste des rôles>/>
+java --add-opens java.base/java.util=ALL-UNNAMED \
+   -Duser.language=fr -Duser.country=FR \
+   -Djava.io.tmpdir=/tmp/jetty \
+   -Dgeorchestra.datadir=/etc/georchestra \
+   -Dspring.config.additional-location=file:<répertoire de configuration>/config/ \
+   ${ADD_JAVA_OPTS}                  \
+   -Xmx${XMX:-1G} -Xms${XMX:-1G}           \
+   -jar photoobliques.jar"
 ```
 
-Le Swagger sera accessible sur ```https://<serveur_georchestra>:<port>/photosobliques/swagger-ui.html"```. Il n'est pas possible de configurer cet url.
+**Remarques :**
 
-## IV Démarrage du service
+La propriété ```spring.config.additional-location``` doit désigner une répertoire contenant :
+- Un fichier *./default.properties* correspondant au fichier de configuration par défaut de GeOrchestra
+- Un fhchier *./photos-obliques/photos-obliques.properties* correspondant au fichier de configuration de l'application
 
-### IV.1 - Intégration *gitHub Rennes métropole*
+### III.2 Création d'une image docker
+
+Le répertoire *docker/template* contient les fichiers *Dockerfile* permettant de créer :
+
+- une image pour le backend *[docker/template/photosobliques/Dockerfile](docker/template/photosobliques/Dockerfile)*,
+- une image pour le proxy GeOrchestra *[docker/template/proxy/Dockerfile](docker/template/proxy/Dockerfile)*utilisé pour la gestion de l'authentificiation.
+
+Il est possible de générer une image docker en utilisant la commande suivante :
+
+```
+mvn clean package -DskipTests -Pdocker package
+```
+
+## III.3 Service Docker compose
 
 Lors de la mise à jour du repository git `https://github.com/sigrennesmetropole/geor_photos_obliques_backend`, des actions Gits sont déclenchées afin :
 
@@ -116,11 +165,9 @@ Lors de la mise à jour du repository git `https://github.com/sigrennesmetropole
 - De pousser sur `https://hub.docker.com/r/sigrennesmetropole/geor_photos_obliques_backend` les images dockers du backend et de l'application back-office
 
 
-### IV.2 Docker compose
-
 Deux options s'offrent à vous pour exécuter l'application avec Docker Compose :
 
-1. Créer un nouveau fichier docker-compose.yml
+1. Créer un nouveau fichier *docker-compose.yml*
 
 Si vous souhaitez démarrer l'application sur un nouveau serveur, vous pouvez créer un nouveau fichier docker-compose.yml dédié à cette application. 
 Ce fichier définira la configuration des conteneurs Docker nécessaires à l'exécution de l'application.
@@ -131,30 +178,33 @@ Si vous souhaitez utiliser docker sur le même serveur que les autres applicatio
 Pour ce faire, il vous faudra ajouter une nouvelle section au fichier définissant les conteneurs et les volumes nécessaires à l'exécution de l'application.
 
 
-Voici un example d'intégration de photos obliques dans un docker-compose.yml
+Voici un example d'intégration de photos obliques dans un [docker-compose.yml](docker/docker-compose.yml)
 
-```yaml
-volumes:
-    photosobliques_data:
 
-services:
-    photosobliques:
-        image: sigrennesmetropole/geor_photos_obliques_backend:<version de l'image, example :v1.0.0>
-        ports:
-            - "<photosobliques_server_expose_port>:<photosobliques_server_port>"      
-        volumes:
-            - ./config:/etc/georchestra
-            - ./photosobliques_data:/opt/photosobliques/data
-        environment:
-            - JAVA_OPTIONS=-Dorg.eclipse.jetty.annotations.AnnotationParser.LEVEL=OFF
-            - ADD_JAVA_OPTS=
-            - XMX=1G
+## IV Intégration dans Georchestra
+
+### IV.1 Modification du security proxy pour Photos Obliques
+
+Ajouter dans le fichier *target-mapping.properties* une ligne permettant de déclarer le backend de photos oblique au security proxy. 
+
+Déclarez le backend avec une ligne de la forme :
+
+```properties
+  photosobliques=http(s)://<hôte du backend>:<port>/photosobliques
+```
+**Example** : ```photosobliques=http://photosobliques:8080/photosobliques```
+
+
+Ajouter dans le fichier *security-mapping.xml* une ligne permettant de configurer les roles qui auront l'accès au backend :
+
+**Example** :
+
+```xml
+<intercept-url pattern="/photosobliques/.*" access=<Liste des rôles>/>
 ```
 
-### IV.3 configuration
+Le Swagger sera accessible sur ```https://<serveur_georchestra>:<port>/photosobliques/swagger-ui.html"```. 
+Il n'est pas possible de configurer cet url.
 
-Pour finaliser la configuration du projet et permettre le lancement de l'application, il est nécessaire d'ajouter le fichier photos-obliques.properties. 
-Ce fichier contient les informations de configuration spécifiques à l'application. Pour plus d'informations sur la configuration de ce fichier, veuillez vous référer à la première partie du README.
 
-Un exemple complet de configuration du fichier photos-obliques.properties est disponible dans le répertoire resources/example. 
-Cet exemple peut vous servir de guide pour configurer votre propre fichier.
+
